@@ -67,3 +67,4 @@ DEBUG = False
 PRINTOUTS_ENABLED = True
 MAX_PARTICIPANT_FILES = 1000
 MAX_PRINT_PAGES = 12
+DISPLAY_QR_CODES = False
